feat: clerk authentication

--- a/apps/webapp/src/index.css
+++ b/apps/webapp/src/index.css
@@ -40,6 +40,7 @@
 	--color-sidebar-border: var(--sidebar-border);
 	--color-sidebar-ring: var(--sidebar-ring);
 }
+
 :root {
 	--radius: 0.75rem;
 	--background: oklch(1 0 0);
@@ -116,4 +117,9 @@
 	body {
 		@apply bg-background text-foreground;
 	}
+}
+
+@utility container {
+	padding-inline: 2rem;
+	margin-inline: auto;
 }
